# bin-wrapper

./: .gitignore  Cargo.toml  README.md
src/: logger.rs  main.rs
