[package]
name = "bin-wrapper"
version = "0.1.0"
authors = ["Alexander Jeurissen <1220084+alexanderjeurissen@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
structopt = { version = "0.2", default-features = false }
