[package]
name = "bin-wrapper"
version = "1.0.0"
authors = ["Alexander Jeurissen <1220084+alexanderjeurissen@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
atty = "0.2.14"
subprocess = "0.2.4"

slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
slog-async = "2.5.0"
slog-term = "2.6.0"

threadpool = "1.8.1"
